--- a/src/components/MonthView.css
+++ b/src/components/MonthView.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  min-height: 0;
   overflow-y: auto;
   overflow-x: hidden;
-  height: 100%;
   min-width: 0;
 }
 
